Changed document to doc
