# src/controllers/comment.controller.ts
@@ -34,8 +34,8 @@ async function create(req, res) {
 }
 // Retrieve all Comment from the database.
 async function findAll(req, res) {
-  const documentId = req.query.documentId
-  const condition = documentId ? { documentId: `${documentId}` } : null
+  const docId = req.query.docId
+  const condition = docId ? { docId: `${docId}` } : null
   await Comment.findAll({ order: [['upvotes', 'DESC']], where: condition, limit: 10 })
     .then(data => {
       res.send(data)
